# python3-starter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python3_starter/: main.py
tests/: test_main.py
